<resources>
    <string name="app_name">Monitory</string>
    <string name="mulai">Mulai</string>
    <string name="masuk"> M<lowercase>asuk</lowercase></string>
    <string name="belikode">Beli Kode Keluarga Disini</string>
    <string name="ketentuan"> <b> Ketentuan Pengguna </b>dan <b>Kebijakan Data </b>kami</string>
    <string name="nama">Contoh : Budi</string>
    <string name="umur">Contoh : 12</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="beresnama">Beres! Sekarang </string>
    <string name="oke">Oke</string>
    <string name="bantukamu">tiap hari buat bantu </string>
</resources>