<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginCode"
    android:background="@color/White_three">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/separator">

        <TextView
            android:id="@+id/txtkodekeluarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:text="Kode Keluarga"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_bold"/>

    <TextView
        android:id="@+id/txtketikkakode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtkodekeluarga"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:text="Ketikkan kode keluarga yang Ayah Bunda"
        android:textSize="16sp"
        android:textColor="@color/black3"
        android:fontFamily="@font/rubik_regular"/>

    <TextView
        android:id="@+id/txtmilikidisini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtketikkakode"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="miliki disini"
        android:textSize="16sp"
        android:textColor="@color/black3"
        android:fontFamily="@font/rubik_regular"/>

    <EditText
        android:id="@+id/btncode"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/txtmilikidisini"
        android:layout_marginTop="20dp"
        android:text="A1B2C3"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:fontFamily="@font/rubik_regular"
        android:textStyle="bold"
        android:background="@drawable/custombtn2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <TextView
        android:id="@+id/txtdeenganmenekan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btncode"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true"
        android:text="Dengan menekan tombol masuk berarti Anda menyetujui "
        android:textSize="11sp"
        android:textColor="@color/black3"
        android:fontFamily="@font/rubik_regular"/>

    <TextView
        android:id="@+id/txtketentuanpengguna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtdeenganmenekan"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/ketentuan"
        android:textSize="11sp"
        android:textColor="@color/black3"
        android:fontFamily="@font/rubik_regular"/>
    <Button
        android:id="@+id/btnmsk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtketentuanpengguna"
        android:text="@string/masuk"
        android:textColor="@color/black"
        android:background="@drawable/custombtn1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="biodata"/>


    </RelativeLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cool_grey"
        android:layout_above="@id/relativelayout2"/>

    <RelativeLayout
        android:id="@+id/relativelayout2"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txtbelumpunyakode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:text="Belum punya kode keluarga?"
            android:textSize="16sp"
            android:textColor="@color/gunmetal"
            android:fontFamily="@font/rubik_regular"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtbelumpunyakode"
            android:text="@string/belikode"
            android:textColor="@color/white"
            android:background="@drawable/custombtn3"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    </RelativeLayout>